--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@ layout: compress
 <br></br>
             
             <a href="#"><i class="fa fa-instagram fa-3x"></i></a>
-            <a href="#"><i class="fa fa-facebook-square fa-3x"></i></a>
+            <a href="https://www.facebook.com/Grateful-mood-440792770017025/?view_public_for=440792770017025"><i class="fa fa-facebook-square fa-3x"></i></a>
             
 
         </div>
