modified menu also on contact and about

--- a/about.html
+++ b/about.html
@@ -35,12 +35,14 @@ layout: compress
 <br></br>
 
 
+<div class="buttons">
 <ul>
 	<li><a href="index.html">Home</a></li>
 	<li><a href="about.html">About</a>
 	<li><a href="contact.html">Contact</a>
 
 </ul>
+</div>
 
 
 
@@ -85,10 +87,7 @@ layout: compress
 <p>I am a passionate climber and traveler</p>
 <p>and it makes me happy to share my passion with the world around me.</p>
 <p>Enjoy!</p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
+
 
         </div>
     </div>
