--- a/contact.html
+++ b/contact.html
@@ -34,12 +34,14 @@ layout: compress
 <br></br>
 <br></br>
 
+<div class="buttons">
 <ul>
 	<li><a href="index.html">Home</a></li>
 	<li><a href="about.html">About</a>
 	<li><a href="contact.html">Contact</a>
 
 </ul>
+</div>
 
 
 
