changed dates of posts, modified the card wrapper in css not to float to the right, modified text in about section, did some mobile view modifications

--- a/about.html
+++ b/about.html
@@ -31,15 +31,15 @@ layout: compress
 <br></br>
 <br></br>
         <h1>Climb & Travel<span>Grateful mood</span></h1>
-<br></br>
-<br></br>
+
+
 
 
 <div class="buttons">
 <ul>
-	<li><a href="index.html">Home</a></li>
-	<li><a href="about.html">About</a>
-	<li><a href="contact.html">Contact</a>
+	<a href="index.html"><li>Home</li></a>
+	<a href="about.html"><li>About</li></a>
+	<a href="contact.html"><li>Contact</li></a>
 
 </ul>
 </div>
@@ -78,15 +78,14 @@ layout: compress
         <div class="pattern pattern--hidden"></div>
         <!-- cards -->
         <div class="text">
-            
-        
-<p>Welcome to my climbing and traveling website!</p>
-<p>This is a place where I share my climbing trips and tips,</p>
-<p>as well as some general techinical knowledge.</p>
+<p>Welcome to a minimalistic climbing and traveling website!</p>
+<p>A place for sharing climbing <b>trips and tips</b>, outdoor location info,</p>
+<p>as well as indoor climbing tips from different countries,</p>
+<p>...and of course, techinical knowledge.</p>
 
-<p>I am a passionate climber and traveler</p>
-<p>and it makes me happy to share my passion with the world around me.</p>
 <p>Enjoy!</p>
+<p></p>
+<p></p>
 
 
         </div>
