--- a/contact.html
+++ b/contact.html
@@ -31,18 +31,17 @@ layout: compress
 <br></br>
 <br></br>
         <h1>Climb & Travel<span>Grateful mood</span></h1>
-<br></br>
-<br></br>
+
+
 
 <div class="buttons">
 <ul>
-	<li><a href="index.html">Home</a></li>
-	<li><a href="about.html">About</a>
-	<li><a href="contact.html">Contact</a>
+	<a href="index.html"><li>Home</li></a>
+	<a href="about.html"><li>About</li></a>
+	<a href="contact.html"><li>Contact</li></a>
 
 </ul>
 </div>
-
 
 
     </header>
