--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@ layout: compress
 
 <div class="buttons">
 <ul>
-	<li><a href="index.html">Home</a></li>
-	<li><a href="about.html">About</a>
-	<li><a href="contact.html">Contact</a>
+	<a href="index.html"><li>Home</li></a>
+	<a href="about.html"><li>About</li></a>
+	<a href="contact.html"><li>Contact</li></a>
 
 </ul>
 </div>
