--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@ layout: compress
            
         </nav>
 
-<div class="buttons">
+<nav class="buttons">
 <ul>
 	<a href="index.html"><li>Home</li></a>
 	<a href="about.html"><li>About</li></a>
 	<a href="contact.html"><li>Contact</li></a>
 
 </ul>
-</div>
+</nav>
 
 
 
